--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <div>
         <form id="questionLabel">
-            <label for="asking">Ask me anything:</label>
-            <input type="text" id="question" size="70" placeholder="Ask away!">
+            <input type="text" id="question" size="70" placeholder="Ask me anything!">
         </form>
     </div>
 
