fix test box display

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div class="heading">
-        <h1>Magic 8 Ball</h1><br />
+        <h1>Magic 8 Ball</h1>
     </div>
 
     <div>
         <form id="questionLabel">
-            <input type="text" id="question" size="70" placeholder="Ask me anything!">
+            <input type="text" id="question" size="75%" placeholder="Ask me anything!">
         </form>
     </div>
 
-    <br /><br />
+    <br /><br /><br /><br /><br /><br />
     <div class="ballPic">
         <button id="ball" onClick="shakeTheBall()"></button>
     </div>
