change textbox size for pc and mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div>
         <form id="questionLabel">
-            <input type="text" id="question" size="20%" placeholder="Ask me anything!">
+            <input type="text" id="question" class="boxSize" placeholder="Ask me anything!">
         </form>
     </div>
 
